# orbag-server/src/main/java/orbag/server/tree/TreeElement.java
@@ -20,6 +20,8 @@ public class TreeElement {
 
     boolean folder;
 
+    boolean destination;
+
     public String getDisplayLabel() {
         return displayLabel;
     }
@@ -66,5 +68,13 @@ public class TreeElement {
 
     public void setChildren(List<TreeElement> children) {
         this.children = children;
+    }
+
+    public boolean isDestination() {
+        return destination;
+    }
+
+    public void setDestination(boolean destination) {
+        this.destination = destination;
     }
 }
